The ASCII art for Volcanoes are now an attribute of the Volcano class instead of the Board